--- a/clientTest/package.json
+++ b/clientTest/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "2.11.1",
     "react-dom": "17.0.1",
     "react-notification-alert": "0.0.13",
+    "react-redux": "^7.2.5",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "8.7.1",
