--- a/clientTest/package.json
+++ b/clientTest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "black-dashboard-react",
+  "name": "",
   "version": "1.2.0",
   "private": true,
   "homepage": "https://demos.creative-tim.com/black-dashboard-react/#/admin/dashboard",
@@ -29,8 +29,8 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "start": "PORT=5000 NODE_PATH=./src react-scripts start",
+    "build": "react-scripts build ",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
