--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "history": "^5.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
