--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "history": "^5.0.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
