Add admin get cards redux and component

--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "knex": "^0.21.21",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
+    "rickmortyapi": "^1.0.0",
     "socket.io": "^4.2.0",
     "sqlite3": "^5.0.2",
     "yup": "^0.32.9"
